<resources>
    <string name="app_name">Caluladora Gamer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="wrong_updating">Something went wrong updating</string>
    <string name="download_successful">Download Successful, Restarting app</string>

    <string name="gamer_calculator">Gamer Calculator</string>
    <string name="store_in_dollars">Store in Dollars</string>
    <string name="store_in_pesos">Store in Pesos</string>
    <string name="choose_pay">Choose The Way to Pay on Your Platform</string>
    <string name="card">Card</string>
    <string name="mep">MEP</string>
    <string name="crypto">Crypto</string>
    <string name="ars">ARS</string>
    <string name="usd">USD</string>
    <string name="update_date">Update Date:</string>
    <string name="iva">IVA 21%: </string>
    <string name="perception">RG ARCA 30%:</string>
    <string name="final_price">Final Price:</string>
    <string name="calculator">Calculator</string>
    <string name="subscription">Subscription</string>
    <string name="settings">Settings</string>
    <string name="total_taxes">Total Taxes:</string>
    <string name="without_taxes">Without Taxes:</string>
    <string name="hint">$0.00</string>

    <string name="share">Share App</string>
    <string name="qr">Share App With QR</string>
    <string name="rate">Rate App</string>
    <string name="contact">Contact Us</string>
    <string name="about">About</string>
    <string name="other_apps">Our Other Apps</string>
    <string name="announcement">To Help Check Out This Short Announcement</string>

    <string name="qualify">If you liked the app, please leave a positive rating or review on Google Play.</string>
    <string name="thanks">Thank you for using our app</string>

</resources>