<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/prueba2"
    tools:context=".ui.views.fragments.HomeFragment">

    <LinearLayout
        android:id="@+id/title_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="65dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_icon_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gamer Calculator"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_title_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textStyle="italic"
        android:text="@string/choose_pay"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_app" />

    <LinearLayout
        android:id="@+id/linear_btns_dollar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_choose">

        <Button
            android:id="@+id/button_tarjeta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded"
            android:text="@string/card"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_dolarmep"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded"
            android:text="@string/mep"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_cripto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded"
            android:text="@string/crypto"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_pesos_dollar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_btns_dollar">

        <EditText
            android:id="@+id/et_price_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="16dp"
            android:hint="@string/hint"
            android:textColorHint="@color/light_gray"
            android:textColor="@color/white"
            android:backgroundTint="@color/prueba5"
            android:background="@drawable/edit_text"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLength="14"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_btns_dollar" />

        <RadioButton
            android:id="@+id/rd_dollar"
            android:text="@string/usd"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:buttonTint="@color/prueba5"
            android:layout_marginEnd="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rd_pesos"
            android:text="@string/ars"
            android:layout_marginEnd="30dp"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:buttonTint="@color/prueba5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_container"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/prueba"
        app:cardCornerRadius="14dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_pesos_dollar">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <View
                android:id="@+id/divider"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="150dp"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_value" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_date"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/date"
            app:layout_constraintStart_toEndOf="@+id/divider"
            app:layout_constraintTop_toTopOf="@+id/date"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="2024/11/10" />

            <View
                android:id="@+id/divider_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_value" />

            <TextView
                android:id="@+id/txt_tax_iva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iva"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider_1"
                app:layout_constraintEnd_toEndOf="@id/divider" />

        <TextView
            android:id="@+id/result_price_iva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$0.0"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/divider"
            app:layout_constraintTop_toTopOf="@+id/txt_tax_iva"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/txt_tax_iva" />

            <View
                android:id="@+id/divider_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/result_price_iva"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/txt_tax_arca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perception"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider_2"
                app:layout_constraintEnd_toEndOf="@id/divider" />

        <TextView
            android:id="@+id/result_price_arca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$0.0"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/divider"
            app:layout_constraintTop_toTopOf="@+id/txt_tax_arca"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/txt_tax_arca" />

            <View
                android:id="@+id/divider_3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/txt_tax_arca"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/txt_sin_impuestos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="sin impuestos:"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider_3"
                app:layout_constraintEnd_toStartOf="@+id/total_sin_impuestos"
                app:layout_constraintBottom_toTopOf="@+id/divider_4" />

        <TextView
            android:id="@+id/total_sin_impuestos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$0.0"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@+id/txt_sin_impuestos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/divider"
            app:layout_constraintBottom_toBottomOf="@+id/txt_sin_impuestos"/>

            <View
                android:id="@+id/divider_4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/txt_sin_impuestos"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/txt_impuestos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="impuestos totales:"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/divider_5"
                app:layout_constraintEnd_toStartOf="@+id/divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider_4" />

        <TextView
            android:id="@+id/total_impuestos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$0.0"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/txt_impuestos"
            app:layout_constraintStart_toEndOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_impuestos" />

            <View
                android:id="@+id/divider_5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/txt_impuestos"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/final_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/final_price"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider_5"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$0"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="@+id/final_price"
                app:layout_constraintBottom_toBottomOf="@+id/final_price"
                app:layout_constraintStart_toEndOf="@+id/divider"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <FrameLayout
        android:id="@+id/container_loading"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <View
        android:id="@+id/view_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:background="@color/gray" />

    <ProgressBar
        android:id="@+id/loading_service"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>